--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/conf/datasources/yyy.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/conf/datasources/yyy.properties
@@ -3,7 +3,7 @@
 #db.name=YYY Database
 #db.type=direct
 #db.driver=com.mysql.jdbc.Driver
-#db.location=jdbc:mysql://localhost/test
+#db.location=jdbc\:mysql\://localhost/test
 #db.user=myuser
 #db.password=mypassword
 #db.auto-commit=false
