--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/conf/datasources/default.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/conf/datasources/default.properties
@@ -1,5 +1,5 @@
 # Default Database injected by the platform infrastructure
-db.id=DEFAULT_DATASOURCE
+db.id=Default
 db.name=Default Database
 db.type=jndi
-db.location=java:comp/env/jdbc/DefaultDB
+db.location=java\:comp/env/jdbc/DefaultDB
