--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
@@ -48,6 +48,8 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+			        <debug>true</debug>
+			        <debuglevel>lines,vars,source</debuglevel> 
 				</configuration>
 			</plugin>
 			<plugin>
