--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/trial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/trial/web.xml
@@ -98,6 +98,55 @@
 			<param-value>org.eclipse.dirigible.repository.local.LocalRepositoryProvider</param-value>
 		</init-param>
 		
+		<!-- Default Repository Provider Master (used for Initial Load or Reset) 
+		<init-param>
+			<param-name>repositoryProviderMaster</param-name>
+			<param-value>org.eclipse.dirigible.repository.git.GitMasterRepositoryProvider</param-value>
+		</init-param>
+		-->
+		
+		<!-- Master Repository parameters - Git based 
+		<init-param>
+			<param-name>masterRepositoryGitTarget</param-name>
+			<param-value>master_git_repository</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>masterRepositoryGitLocation</param-name>
+			<param-value>https://github.com/delchev/master_repository_test.git</param-value>
+		</init-param>
+		
+		<!- -
+		<init-param>
+			<param-name>masterRepositoryGitUser</param-name>
+			<param-value>{git username}</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>masterRepositoryGitPassword</param-name>
+			<param-value>{git password}</param-value>
+		</init-param>
+		 - ->
+		 
+		<init-param>
+			<param-name>masterRepositoryGitBranch</param-name>
+			<param-value>origin/master</param-value>
+		</init-param>
+		
+		<!- -
+		<init-param>
+			<param-name>http.proxyHost</param-name>
+			<param-value>proxy</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>http.proxyPort</param-name>
+			<param-value>8080</param-value>
+		</init-param>
+		- ->
+		
+		-->
+		
 		<!-- Mail Service Built-in --> 
 		<init-param>
 			<param-name>mailSender</param-name>
