Groups all p2 related projects together

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.bridge/bridge.feature/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.bridge/bridge.feature/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
-	<name>Bridge - Feature</name>
+	<name>p2 - Bridge - Feature</name>
 	<artifactId>org.eclipse.dirigible.bridge.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 
