--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.ide/ide.feature/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.ide/ide.feature/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>IDE - Feature</name>
+	<name>p2 - IDE - Feature</name>
 	<artifactId>org.eclipse.dirigible.ide.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 
