--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.lib/lib.feature/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.lib/lib.feature/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Lib - Feature</name>
+	<name>p2 - Lib - Feature</name>
 	<artifactId>org.eclipse.dirigible.lib.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 
