--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.repository/repository.p2/.project
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.repository/repository.p2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Repository - p2</name>
+	<name>p2 - Repository - p2</name>
 	<comment></comment>
 	<projects>
 	</projects>
