--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.runtime/runtime.feature/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.runtime/runtime.feature/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Runtim - Feature</name>
+	<name>p2 - Runtime - Feature</name>
 	<artifactId>org.eclipse.dirigible.runtime.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 
