--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>All in One</name>
+	<name>Releng - All in One</name>
 	<artifactId>allinone</artifactId>
 	<packaging>war</packaging>
 
