--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Runtime</name>
+	<name>Releng - Runtime</name>
 	<artifactId>runtime</artifactId>
 	<packaging>war</packaging>
 
