--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.repository/repository.p2/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/p2.repository/repository.p2/pom.xml
@@ -10,9 +10,8 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Repository - p2</name>
+	<name>p2 - Repository - p2</name>
 	<artifactId>org.eclipse.dirigible.repository.p2</artifactId>
 	<packaging>eclipse-repository</packaging>
 
 </project>
-
