--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/.project
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>All in One</name>
+	<name>Releng - All in One</name>
 	<comment></comment>
 	<projects>
 	</projects>
