renaming c'd + clean-up

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.common.test/.project
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.common.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.dirigible.ide.template.ui.common.test</name>
+	<name>IDE - Template - Test</name>
 	<comment></comment>
 	<projects>
 	</projects>
