--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.common.test/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.common.test/pom.xml
@@ -10,6 +10,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
+	<name>IDE - Template - Test</name>
 	<artifactId>org.eclipse.dirigible.ide.template.ui.common.test</artifactId>  
   
 </project>
