--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.java.test/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.java.test/pom.xml
@@ -9,6 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
+	<name>Runtime - Java - Test</name>
 	<artifactId>org.eclipse.dirigible.runtime.java.test</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 
