--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.publish.test/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.publish.test/pom.xml
@@ -11,6 +11,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
+	<name>IDE - Publish - Test</name>
 	<artifactId>org.eclipse.dirigible.ide.publish.test</artifactId>
 	
 </project>
