sandboxing related minor fixes https://bugs.eclipse.org/bugs/show_bug.cgi?id=482446

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
@@ -64,14 +64,23 @@
 			<param-name>defaultDataSourceType</param-name>
 			<param-value>local</param-value>
 		</init-param>
+		
+		<!-- Enable Auto-Activate option -->
 		<init-param>
 			<param-name>autoActivateEnabled</param-name>
 			<param-value>true</param-value>
 		</init-param>
 		
+		<!-- Enable Auto-Publish option -->
 		<init-param>
 			<param-name>autoPublishEnabled</param-name>
 			<param-value>true</param-value>
+		</init-param>
+		
+		<!-- Enable Sandboxing option - disabled by default -->
+		<init-param>
+			<param-name>enableSandbox</param-name>
+			<param-value>false</param-value>
 		</init-param>
 		
 		<!-- JNDI key for the Default Database DataSource -->
