new bundle for dialects only: 485221

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -84,6 +84,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.repository.velocity@start,\
   org.eclipse.dirigible.repository.git@start,\
   org.eclipse.dirigible.repository.datasource@start,\
+  org.eclipse.dirigible.repository.datasource.dialects@start,\
   org.eclipse.dirigible.runtime.core@start,\
   org.eclipse.dirigible.runtime.javascript@start,\
   org.eclipse.dirigible.runtime.wiki@start,\
