--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -100,6 +100,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.repository.velocity@start,\
   org.eclipse.dirigible.repository.git@start,\
   org.eclipse.dirigible.repository.datasource@start,\
+  org.eclipse.dirigible.repository.datasource.dialects@start,\
   org.eclipse.dirigible.ide.repository.ui@start,\
   org.eclipse.dirigible.ide.scripts.publish@start,\
   org.eclipse.dirigible.ide.security.publish@start,\
