--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/pom.xml
@@ -143,6 +143,7 @@
 		<module>org.eclipse.dirigible.ide.help</module>
 		<module>org.eclipse.dirigible.ide.terminal</module>
 		<module>org.eclipse.dirigible.ide.generic</module>
+		<module>org.eclipse.dirigible.ide.workspace.wizard.templates</module>
 	</modules>
 
 	<dependencies>
