--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -121,6 +121,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.ide.workspace@start,\
   org.eclipse.dirigible.ide.workspace.ui@start,\
   org.eclipse.dirigible.ide.workspace.wizard.project@start,\
+  org.eclipse.dirigible.ide.workspace.wizard.templates@start,\
   org.eclipse.dirigible.ide.shared@start,\
   org.eclipse.dirigible.ide.jgit.connector@start,\
   org.eclipse.dirigible.org.eclipse.rap.rwt.supplemental.filedialog@start,\
