Adds "Mobile" section in the Registry UI

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -113,8 +113,10 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.ide.template.ui.tc@start,\
   org.eclipse.dirigible.ide.template.ui.sc@start,\
   org.eclipse.dirigible.ide.template.ui.ed@start,\
+  org.eclipse.dirigible.ide.template.ui.mobile@start,\
   org.eclipse.dirigible.ide.ui.common@start,\
   org.eclipse.dirigible.ide.ui.publish@start,\
+  org.eclipse.dirigible.ide.mobile.publish@start,\
   org.eclipse.dirigible.ide.ui.rap@start,\
   org.eclipse.dirigible.ide.ui.widget.extbrowser@start,\
   org.eclipse.dirigible.ide.ui.widget.connection@start,\
@@ -134,6 +136,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.runtime.sql@start,\
   org.eclipse.dirigible.runtime.groovy@start,\
   org.eclipse.dirigible.runtime.ui@start,\
+  org.eclipse.dirigible.runtime.mobile@start,\
   org.eclipse.dirigible.runtime.flow@start,\
   org.eclipse.dirigible.runtime.security@start,\
   org.eclipse.dirigible.runtime.metrics@start,\
