Run on Dirigible - initial https://bugs.eclipse.org/bugs/show_bug.cgi?id=486541

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/plugin.xml
@@ -231,4 +231,15 @@
       <startup
             class="org.eclipse.dirigible.ide.workspace.wizard.project.getstarted.GetStartedStartup"></startup>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.eclipse.dirigible.ide.workspace.wizard.project.gitinit.GitStartup"></startup>
+   </extension>
+  <extension
+        point="org.eclipse.dirigible.ide.ui.rap.init">
+     <initializer
+           class="org.eclipse.dirigible.ide.workspace.wizard.project.gitinit.GitDirigibleWorkbenchInitializer">
+     </initializer>
+  </extension>
 </plugin>
