--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/build.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               resources/
+               resources/,\
+               schema/
