--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="org.eclipse.dirigible.ide.ui.rap.init" name="WorkbenchInitializer" schema="schema/org.eclipse.dirigible.ide.ui.rap.init.exsd"/>
    <extension
          point="org.eclipse.rap.ui.layouts">
       <layout
