theme service added https://bugs.eclipse.org/bugs/show_bug.cgi?id=486910

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/plugin.xml
@@ -133,5 +133,15 @@
               load-on-startup="true">
         </servlet>
      </extension>
+     
+     <extension
+           id="ThemesServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/theme"
+              class="org.eclipse.dirigible.runtime.content.ThemesServlet"
+              load-on-startup="true">
+        </servlet>
+     </extension>
 	 
 </plugin>
