Runtime Catalog Service - initial https://bugs.eclipse.org/bugs/show_bug.cgi?id=487509

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.core/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.core/plugin.xml
@@ -2,9 +2,6 @@
 <?eclipse version="3.4"?>
 <plugin>
 
-	 
-	 
-	 
 	 <extension
            id="RegistryServlet"
            point="org.eclipse.equinox.http.registry.servlets">
@@ -89,6 +86,16 @@
         <servlet
               alias="/publish"
               class="org.eclipse.dirigible.runtime.registry.WorkspacePublishServlet"
+              load-on-startup="true">
+        </servlet>
+     </extension>
+     
+     <extension
+           id="RuntimeServicesServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/runtime"
+              class="org.eclipse.dirigible.runtime.registry.RuntimeServicesServlet"
               load-on-startup="true">
         </servlet>
      </extension>
