adding descriptor for search, search in workspace, import, export, clone import, clone export, project import, memory, access log

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/build.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/build.properties
@@ -2,5 +2,6 @@ source.. = src/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               src/content.zip
+               src/content.zip,\
+               OSGi-INF/
 
