--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -6,7 +6,7 @@ osgi.bundles=com.google.gson@start,\
   com.jcraft.jsch@start,\
   javaewah@start,\
   javax.activation@start,\
-  javax.mail@start,\
+  javax.mail.glassfish@start,\
   javax.xml@start,\
   org.apache.commons.codec@start,\
   org.apache.commons.collections@start,\
