Initial Listener via message subscription https://bugs.eclipse.org/bugs/show_bug.cgi?id=489423

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat-postgres/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat-postgres/web.xml
@@ -315,6 +315,7 @@
 			<url-pattern>/services/sql-sandbox/*</url-pattern>
 			<url-pattern>/services/flow-log/*</url-pattern>
 			<url-pattern>/services/job-log/*</url-pattern>
+			<url-pattern>/services/listener-log/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Everyone</role-name>
