move the menu.json to repository https://bugs.eclipse.org/bugs/show_bug.cgi?id=489627

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.core/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.core/plugin.xml
@@ -99,5 +99,15 @@
               load-on-startup="true">
         </servlet>
      </extension>
+     
+     <extension
+           id="RegistryMenuServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/ui/menu"
+              class="org.eclipse.dirigible.runtime.registry.RegistryMenuServlet"
+              load-on-startup="true">
+        </servlet>
+     </extension>
         
 </plugin>
